<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"
                    android:text="@string/device_name"
                    android:textSize="14sp"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="15dp"/>
                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/input_device_name"
                    android:textSize="14sp"
                    android:background="@null"
                    android:textColor="@color/text_color"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"
                    android:text="@string/id"
                    android:textSize="14sp"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="15dp"/>
                <EditText
                    android:id="@+id/et_sn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/input_id"
                    android:textSize="14sp"
                    android:textColor="@color/text_color"
                    android:background="@null"
                    android:layout_marginRight="15dp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"
                    android:text="@string/start_time"
                    android:textSize="14sp"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="15dp"/>
                <TextView
                    android:id="@+id/tv_start_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/select_start_time"
                    android:textSize="14sp"
                    android:textColor="@color/text_color"/>
                <ImageView
                    android:id="@+id/iv_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_picker"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"
                    android:text="@string/end_time"
                    android:textSize="14sp"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="15dp"/>
                <TextView
                    android:id="@+id/tv_end_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/select_end_time"
                    android:textSize="14sp"
                    android:textColor="@color/text_color"/>
                <ImageView
                    android:id="@+id/iv_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_picker"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"
                    android:text="@string/deal_state"
                    android:textSize="14sp"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="15dp"/>
                <CheckBox
                    android:id="@+id/cb_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"/>
                <CheckBox
                    android:id="@+id/cb_processed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/processed"
                    android:layout_marginLeft="5dp"/>
                <CheckBox
                    android:id="@+id/cb_untreated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/untreated"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"
                    android:text="@string/idea"
                    android:textSize="14sp"
                    android:textColor="@color/text_color"
                    android:layout_marginLeft="15dp"/>
                <EditText
                    android:id="@+id/et_idea"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/input_idea"
                    android:textSize="14sp"
                    android:textColor="@color/text_color"
                    android:background="@null"
                    android:inputType="text"
                    android:layout_marginRight="15dp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>

            <Button
                android:id="@+id/btn_complete"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/ok"
                android:background="@drawable/shape_defult_button_bg"
                android:textColor="@color/white"
                android:layout_margin="25dp"
                style="?android:attr/borderlessButtonStyle"/>


        </LinearLayout>
    </ScrollView>


</LinearLayout>
