<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#efefef"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorAccent"
        android:layout_below="@+id/toolbar"></LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_map_device_state_bg"
        android:elevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pile_name"
                    android:textSize="15sp"
                    android:textColor="#808080"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*"
                    android:textColor="#ff0000"
                    android:textSize="15sp"/>
            </LinearLayout>
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_pile_name"
                android:textSize="14sp"
                android:layout_margin="10dp"
                android:textColor="@color/text_color"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_"
                    android:textSize="15sp"
                    android:textColor="#808080"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*"
                    android:textColor="#ff0000"
                    android:textSize="15sp"/>
            </LinearLayout>
            <EditText
                android:id="@+id/et_sn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_id_"
                android:textSize="14sp"
                android:layout_margin="10dp"
                android:textColor="@color/text_color"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textSize="15sp"
                android:textColor="#808080"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:id="@+id/et_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_longitude"
                android:textSize="14sp"
                android:layout_margin="10dp"
                android:textColor="@color/text_color"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textSize="15sp"
                android:textColor="#808080"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:id="@+id/et_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_latitude"
                android:textSize="14sp"
                android:layout_margin="10dp"
                android:textColor="@color/text_color"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remark"
                android:textSize="15sp"
                android:textColor="#808080"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"/>
            <EditText
                android:id="@+id/et_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_remark"
                android:textSize="14sp"
                android:layout_margin="10dp"
                android:textColor="@color/text_color"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon"
                    android:textSize="15sp"
                    android:textColor="#808080"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="#808080"
                    android:layout_margin="10dp"
                    android:layout_below="@+id/tv_text"/>
                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"/>
                <ImageView
                    android:id="@+id/iv_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_update"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>

            <Button
                android:id="@+id/btn_complete"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/ok"
                android:background="@drawable/shape_defult_button_bg"
                android:textColor="@color/white"
                android:layout_margin="25dp"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>
    </ScrollView>




</RelativeLayout>
