<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idea"
        android:textColor="#808080"
        android:textSize="16sp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/et_idea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/input_idea"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="text"
        android:layout_marginTop="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"
        android:layout_marginTop="12dp"/>
    <Button
        android:id="@+id/btn_ok"
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:background="@drawable/shape_defult_button_bg"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>